--- a/자료구조/learn/접근적_표기법.md
+++ b/자료구조/learn/접근적_표기법.md
@@ -8,6 +8,7 @@
 * 알고리즘의 성능(알고리즘이 얼마나 느릴 수 있는지를 보여주기 때문에)을 평가하고 비교하는 데 중요한 도구로서 성능 보장 측면에서 매우 유용하여 실시간 시스템이나 안전이 중요한 시스템에서 사용.
 * 연산횟수의 함수 T(n)이 다항식으로 표현이 되는경우 최고차항의 차수가 빅-오가 된다(T(n) = n^2 + 2n + 1 = n^2 --> O(n^2) = T(n) ).
 * 빅-오는 알고리즘의 실행 시간 또는 메모리 사용량(연산횟수)이 입력 크기(데이터 수)에 따라 어떻게 변하는지 나타낸다.
+* 만약 입력크기가 알고리즘을 만족하지 못할 경우, 메모리 사용량(연산횟수)은 0번 실행된다(알고리즘이 실행되지 않는다).
 
 **빅-오 종류**
 
@@ -20,17 +21,41 @@
   * 입력크기(데이터 수)에 상관없이 항상 일정한 시간이 걸리는(연산횟수가 고정인) 유형의 알고리즘
   * ex : 배열의 첫 번째 요소에 접근하기, 두 개의 숫자를 더하기
 
+```cpp
+int constant_time(int tnum)
+{
+  int sum = tnum/2; //연산횟수 1
+  return sum;
+}
+```
+
 * 1-2. O(logn) - 로그 시간 (Logarithmic Time)
   * 입력크기(데이터 수의 증가율)에 비해서 실행 시간(연산횟수의 증가율)이 휠씬 낮은 로그 형태의 알고리즘
   * ex : 이진 탐색(Binary Search)
+
+
 
 * 1-3. O(n) - 선형 시간 (Linear Time)
   * 입력 크기에 비례하여 실행 시간이 증가하는 알고리즘(직선 모양, 1차원)
   * ex : 배열에서 특정 값을 찾기(순차 탐색 알고리즘)
 
+```cpp
+int linear_time(int tnum)
+{
+    int sum = 0;
+    for (int i = 0; i < tnum; i++)
+    {
+        sum += tnum;
+    }
+    return sum;  //연산횟수 n
+}
+```
+
 * 1-4. O(n log n) - 선형 로그 시간 (Linearithmic Time)
   * 입력 크기가 증가할수록 실행 시간이 n과 log n의 곱으로 증가하는 알고리즘
   * ex : 합병 정렬(Merge Sort), 퀵 정렬(Quick Sort)
+
+
 
 * 1-5. O(n^2) - 이차 시간 (Quadratic Time)
   * 입력 크기에 따라 실행 시간이 n의 제곱에 비례하여 증가하는 알고리즘(면적 모양, 2차원)
@@ -44,9 +69,39 @@
   * 입력 크기가 커질수록 실행 시간이 지수 형태로 증가하는 알고리즘
   * ex : 피보나치 수열의 비효율적 계산(재귀).
 
+```cpp
+int fibonacci(int n) 
+{
+    if (n <= 1) 
+    {
+        return n;
+    }
+    return fibonacci(n - 1) + fibonacci(n - 2); //연산횟수 2^n
+}
+```
+
 * 1-8. O(n!) - 팩토리얼 시간 (Factorial Time)
   * 입력 크기에 따라 실행 시간이 팩토리얼 형태로 증가하는 알고리즘
   * ex : 순열 생성
+
+```cpp
+void permute(char *str, int left, int right) 
+{
+    if (left == right) 
+    {
+        printf("%s\n", str);
+    }
+    else 
+    {
+        for (int i = left; i <= right; i++) 
+        {
+            swap((str + left), (str + i));
+            permute(str, left + 1, right);
+            swap((str + left), (str + i)); // 백트래킹
+        }
+    }
+}
+```
 
 #### 2. 오메가 표기법 (Omega)
 * 성능이 중요한 상황에서 사용되는 수학적 표기법으로서 '알고리즘의 최선의 경우(best case)' 성능을 나타내며 하한선을 정의한다.
