--- a/자료구조/learn/접근적_표기법.md
+++ b/자료구조/learn/접근적_표기법.md
@@ -31,13 +31,13 @@ int constant_time(int tnum)
 
 * 1-2. O(logn) - 로그 시간 (Logarithmic Time)
   * 입력크기(데이터 수의 증가율)에 비해서 실행 시간(연산횟수의 증가율)이 휠씬 낮은 로그 형태의 알고리즘
-  * ex : 이진 탐색(Binary Search)
+  * ex : [이진 탐색(Binary Search)](https://github.com/YouAndMeToo3323/TIL/blob/main/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0/learn/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0%EC%99%80_%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98.md)
 
 
 
 * 1-3. O(n) - 선형 시간 (Linear Time)
   * 입력 크기에 비례하여 실행 시간이 증가하는 알고리즘(직선 모양, 1차원)
-  * ex : 배열에서 특정 값을 찾기(순차 탐색 알고리즘)
+  * ex : 배열에서 특정 값을 찾기[(순차 탐색 알고리즘)](https://github.com/YouAndMeToo3323/TIL/blob/main/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0/learn/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0%EC%99%80_%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98.md)
 
 ```cpp
 int linear_time(int tnum)
