--- a/자료구조/learn/접근적_표기법.md
+++ b/자료구조/learn/접근적_표기법.md
@@ -24,8 +24,8 @@
 ```cpp
 int constant_time(int tnum)
 {
-  int sum = tnum/2; //연산횟수 1
-  return sum;
+  int sum = tnum/2;
+  return sum; //연산횟수 1
 }
 ```
 
@@ -45,7 +45,7 @@ int linear_time(int tnum)
     int sum = 0;
     for (int i = 0; i < tnum; i++)
     {
-        sum += tnum;
+        sum++;
     }
     return sum;  //연산횟수 n
 }
@@ -61,9 +61,42 @@ int linear_time(int tnum)
   * 입력 크기에 따라 실행 시간이 n의 제곱에 비례하여 증가하는 알고리즘(면적 모양, 2차원)
   * ex : 버블 정렬(Bubble Sort), 삽입 정렬(Insertion Sort)
 
+```cpp
+int quadratic_time(int tnum) 
+{
+    int sum = 0;
+    for (int i = 0; i < tnum; i++) 
+    {
+        for (int j = 0; j < tnum; j++) 
+        {
+            sum++;
+        }
+    }
+    return sum;  //연산횟수 n^2
+}
+```
+
 * 1-6. O(n^3) - (Polynomial / Cubic Time)
   * 입력 크기에 따라 실행 시간이 n의 세 제곱에 비례하여 증가하는 알고리즘(큐빅 모양, 3차원)
   * 삼중으로 중첩된 반복문 내에서 알고리즘에 관련된 연산이 진행되는 경우에 발생
+
+```cpp
+void Polynomial_time(int tnum) 
+{
+    int sum = 0;
+    for (int i = 0; i < tnum; i++) 
+    {
+        for (int j = 0; j < tnum; j++) 
+        {
+            for (int k = 0; k < tnum; k++)
+            {
+                sum++;
+            }
+        }
+    }
+    return sum;  //연산횟수 n^3
+}
+```
 
 * 1-7. O(2^n) - 지수 시간 (Exponential Time)
   * 입력 크기가 커질수록 실행 시간이 지수 형태로 증가하는 알고리즘
