--- a/자료구조/learn/접근적_표기법.md
+++ b/자료구조/learn/접근적_표기법.md
@@ -105,11 +105,12 @@ void Polynomial_time(int tnum)
 ```cpp
 int fibonacci(int n) 
 {
-    if (n <= 1) 
-    {
-        return n;
-    }
-    return fibonacci(n - 1) + fibonacci(n - 2); //연산횟수 2^n
+  if(n == 1)     
+      return 0;
+  else if(n == 2)
+      return 1;
+  else
+      return fibonacci(n-1) + fibonacci(n-2);  //연산횟수 2^n
 }
 ```
 
