--- a/자료구조/learn/접근적_표기법.md
+++ b/자료구조/learn/접근적_표기법.md
@@ -9,6 +9,16 @@
 * 연산횟수의 함수 T(n)이 다항식으로 표현이 되는경우 최고차항의 차수가 빅-오가 된다(T(n) = n^2 + 2n + 1 = n^2 --> O(n^2) = T(n) ).
 * 빅-오는 알고리즘의 실행 시간 또는 메모리 사용량(연산횟수)이 입력 크기(데이터 수)에 따라 어떻게 변하는지 나타낸다.
 * 만약 입력크기가 알고리즘을 만족하지 못할 경우, 메모리 사용량(연산횟수)은 0번 실행된다(알고리즘이 실행되지 않는다).
+* 정의
+
+```
+n ≥ n0 일 때, f(n) ≤ c⋅g(n)
+
+//f(n) : 분석하고자 하는 알고리즘의 실행 시간 또는 공간 사용량을 나타내는 함수
+//g(n) : 상한을 나타내는 함수
+//n : 입력의 크기, n0 : 특정 크기 이상의 입력에 대해 조건이 성립함을 보장하는 임의의 상수
+//c : 양의 상수. 특정한g(n)에 대한 상수 배율
+```
 
 **빅-오 종류**
 
@@ -141,8 +151,28 @@ void permute(char *str, int left, int right)
 * 성능이 중요한 상황에서 사용되는 수학적 표기법으로서 '알고리즘의 최선의 경우(best case)' 성능을 나타내며 하한선을 정의한다.
 * 알고리즘이 얼마나 빠를 수 있는지를 보여주므로, 최선의 시나리오를 평가할 때 유용하여	평균적인 입력이나 특정 입력 조건에서의 성능을 평가할 때 사용.
 * 오메가는 입력 크기(데이터 수)가 증가할 때, 알고리즘의 실행 시간(연산횟수)이 최소한 얼마나 증가하는지를 나타낸다.
+* 정의
+
+```
+n ≥ n0 일 때, f(n) ≥ c⋅g(n)
+
+//f(n) : 분석하고자 하는 알고리즘의 실행 시간 또는 공간 사용량을 나타내는 함수
+//g(n) : 상한을 나타내는 함수
+//n : 입력의 크기, n0 : 특정 크기 이상의 입력에 대해 조건이 성립함을 보장하는 임의의 상수
+//c : 양의 상수. 특정한g(n)에 대한 상수 배율
+```
 
 #### 3. 세타 표기법 (Theta)
 * 알고리즘의 시간 복잡도를 정확하게 평가할 때 사용하는 수학적 표기법으로서 '알고리즘의 평균적인(average case)' 성능을 나타내며 상한선과 하한선을 동시에 정의한다.
 * 알고리즘의 성능을 상한선과 하한선 모두를 포함하여 정확히 나타내며 알고리즘의 시간 복잡도를 정확하게 평가할 수 있다.
 * 입력 크기가 증가할 때, 알고리즘의 실행 시간이 특정 범위 내에서 증가함을 나타낸다.
+* 정의
+
+```
+n ≥ n0 일 때, c1⋅g(n) ≤ f(n) ≤ c2⋅g(n)
+
+//f(n) : 분석하고자 하는 알고리즘의 실행 시간 또는 공간 사용량을 나타내는 함수
+//g(n) : 상한을 나타내는 함수
+//n : 입력의 크기, n0 : 특정 크기 이상의 입력에 대해 조건이 성립함을 보장하는 임의의 상수
+//c1, c2 : 양의 상수. 특정한g(n)에 대한 상수 배율
+```
