--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -3,13 +3,22 @@
 * 구체적인 기능의 완성과정을 언급하지 않고, 순수하게 기능이 무엇인지를 나열 한 것.
 
 ### 2. 리스트
+* 특징
+  * 순서 유지 : 리스트는 요소들의 순서를 유지한다. 각 요소는 인덱스(순서 번호)를 가지고 있으며, 이를 통해 요소에 접근할 수 있다.
+  * 동일한 데이터 타입 :  동일한 데이터 타입의 요소들을 저장한다.
+  * 크기 가변성 : 리스트는 요소를 추가하거나 제거할 수 있어 크기가 유동적이다.
+  * 빠른 인덱싱 : 인덱스를 통해 요소에 빠르게 접근할 수 있다.
+* 구현방법
+  * 배열 기반 리스트
+  * 연결 리스트
+
 
 #### 2-1. 배열 기반 리스트
 * 
 * 장점
   * 데이터의 참조가 쉽다. 인덱스 값을 기준으로 어디든 한 번에 참조가 가능하다.
 * 단점
-  * 배열의 길이가 초기에 결정되어야 한다. 변경이 불가능
+  * 배열의 길이가 초기에 결정되어야 한다. 확장이 필요할 경우, 동적할당이고 realloc함수를 이용하여 확장한다.
   * 삭제의 과정에서 데이터의 이동(복사)가 매우 빈번히 일어난다.
 
 
