--- a/자료구조/BackJoon/유클리드_호제법.md
+++ b/자료구조/BackJoon/유클리드_호제법.md
@@ -9,23 +9,25 @@
 4. 그렇지 않으면, m을 n으로 나눈 나머지를 새롭게 m에 대입하고, m과 n을 바꾸고 3번으로 돌아온다.
 */
 
-//재귀
-int gcd(int a, int b)
+//재귀호출을 이용한 알고리즘
+int  gcd(int ta, int tb)
 {
-	return b ? gcd(b, a%b) : a;
-}
+	if (tb == 0)
+		return ta;
+	else
+		return gcd(tb, ta % tb);
+};
 
-//반복문을 이용한 알고리즘
+//반복문과 교환을 이용한 알고리즘
 int gcd(int a, int b)
 {
-    int c;
+    int temp;
 	while(b)
 	{
-		c = a % b;
+		temp = a % b;
 		a = b;
 		b = c;
 	}
     return a;
 }
-
 ```
