--- a/자료구조/BackJoon/유클리드_호제법.md
+++ b/자료구조/BackJoon/유클리드_호제법.md
@@ -1,6 +1,13 @@
 ### 유클리드 호제법
 * 2개의 자연수 또는 다항식의 최대공약수를 구하는 알고리즘로서 두 수가 서로 상대방 수를 나누어서 결국 원하는 수를 얻는 방법
-
+* 예시
+```
+1071은 1029로 나누어 떨어지지 않기 때문에, 1071을 1029로 나눈 나머지를 구한다. ≫ 42
+1029는 42로 나누어 떨어지지 않기 때문에, 1029를 42로 나눈 나머지를 구한다. ≫ 21
+42는 21로 나누어 떨어진다.
+따라서, 최대공약수는 21이다.
+```
+* 알고리즘
 ```cpp
 /*
 1. 입력으로 두 수 m,n(m>n)이 들어온다.
@@ -31,3 +38,8 @@ int gcd(int a, int b)
     return a;
 }
 ```
+
+
+
+
+
