--- a/자료구조/BackJoon/유클리드_호제법.md
+++ b/자료구조/BackJoon/유클리드_호제법.md
@@ -7,6 +7,9 @@
 42는 21로 나누어 떨어진다.
 따라서, 최대공약수는 21이다.
 ```
+![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/a90b1a27-2683-4a99-a832-8484eb36de9c)
+
+
 * 알고리즘
 ```cpp
 /*
