--- a/자료구조/BackJoon/유클리드_호제법.md
+++ b/자료구조/BackJoon/유클리드_호제법.md
@@ -7,8 +7,7 @@
 42는 21로 나누어 떨어진다.
 따라서, 최대공약수는 21이다.
 ```
-![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/a90b1a27-2683-4a99-a832-8484eb36de9c)
-
+<img src ="https://github.com/YouAndMeToo3323/TIL/blob/main/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0/image/Euclidean_algorithm.gif?raw=true" hight = "100px" weight ="300px" title = "유클리드 호제법"><img/>
 
 * 알고리즘
 ```cpp
