--- a/자료구조/BackJoon/유클리드_호제법.md
+++ b/자료구조/BackJoon/유클리드_호제법.md
@@ -1,11 +1,13 @@
 ### 유클리드 호제법
 * 2개의 자연수 또는 다항식의 최대공약수를 구하는 알고리즘로서 두 수가 서로 상대방 수를 나누어서 결국 원하는 수를 얻는 방법
+* 유클리드 호제법에서 나누어 떨어질때의 나눈 값(원하는 수)은 최대공약수(greatest common divisor, GCD)가 된다.
+* 최소공배수(least common multiple, LCM)는 두 수를 곱한값을 최대공약수로 나누어 나온값을 뜻한다.
 * 예시
 ```
 1071은 1029로 나누어 떨어지지 않기 때문에, 1071을 1029로 나눈 나머지를 구한다. ≫ 42
 1029는 42로 나누어 떨어지지 않기 때문에, 1029를 42로 나눈 나머지를 구한다. ≫ 21
 42는 21로 나누어 떨어진다.
-따라서, 최대공약수는 21이다.
+따라서, 최대공약수는 21이고, 최소공배수(LCM) = m * n / 최대공약수(GCD)
 ```
 <img src ="https://github.com/YouAndMeToo3323/TIL/blob/main/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0/image/Euclidean_algorithm.gif?raw=true" height = "200px" width ="100px" title = "유클리드 호제법"><img/>
 
