--- a/자료구조/BackJoon/유클리드_호제법.md
+++ b/자료구조/BackJoon/유클리드_호제법.md
@@ -12,14 +12,20 @@
 <img src ="https://github.com/YouAndMeToo3323/TIL/blob/main/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0/image/Euclidean_algorithm.gif?raw=true" height = "200px" width ="100px" title = "유클리드 호제법"><img/>
 
 * 알고리즘
+  * 기약분수에서도 활용
 ```cpp
 /*
+알고리즘
 1. 입력으로 두 수 m,n(m>n)이 들어온다.
 2. n이 0이라면, m을 출력하고 알고리즘을 종료한다.
 3. m이 n으로 나누어 떨어지면, n을 출력하고 알고리즘을 종료한다.
 4. 그렇지 않으면, m을 n으로 나눈 나머지를 새롭게 m에 대입하고, m과 n을 바꾸고 3번으로 돌아온다.
-*/
 
+기약분수
+분자와 분모의 최대공약수가 1뿐이어서 더 이상 약분되지 않는 분수. 두 분수들의 합을 기약분수로 바꿀 때, 최대공약수로 구한다.
+두 분수들의 합 = (분자1 * 분모2 + 분자2 * 분모1) /(분모1 * 분모2)
+기약분수 = (분자 / 최대공약수) / (분모 / 최대공약수)
+*/
 //재귀호출을 이용한 알고리즘
 int  gcd(int ta, int tb)
 {
@@ -42,8 +48,3 @@ int gcd(int a, int b)
     return a;
 }
 ```
-
-
-
-
-
