--- a/C/learn/포인터.md
+++ b/C/learn/포인터.md
@@ -3,7 +3,8 @@
 
 ### 1. 변수 형태의 포인터
 #### 포인터 변수
-메모리의 주소 값을 저장하기 위한 변수.<br/>
+* 메모리의 주소 값을 저장하기 위한 변수
+
 ```cpp
 int* pnum;  //"pnum"이라는 변수를 선언하고, 이 변수가 정수를 가리킬 수 있는 포인터임을 나타낸다.
 
@@ -19,7 +20,17 @@ double *pnum1;
 char* pnum1, pnum2;  //pnum1은 포인터 변수이지만 pnum2는 변수로 선언됨.
 char *pnum1, *pnum2;  //pnum1과 pnum2는 포인터 변수로 선언.
 ```
+##### 포인터 변수 NULL초기화
+* 초기화 하는 이유
+  * 안전성 : 포인터 변수를 NULL로 초기화하면, 포인터가 유효하지 않은 메모리를 가리킬 가능성을 줄인다.
+  * 디버깅 : 디버깅할 때 NULL 포인터를 쉽게 인식할 수 있으므로, 포인터 초기화 누락으로 인한 버그를 찾기 쉬워진다.
+  * 명확성 : NULL로 초기화하면, 다른 프로그래머가 코드를 읽을 때 해당 포인터가 아직 유효한 메모리 주소를 가리키지 않음을 명확히 알 수 있다.
 
+```cpp
+//포인터 변수를 NULL로 초기화하면 이후 메모리를 할당받기 전에 포인터가 유효한지 여부를 쉽게 확인할 수 있다.
+int *pnum = NULL;
+double *pnum1 = NULL;
+```
 #### &연산자
 '오른쪽에 등장하는 피연산자의 주소 값을 반환하는 연산자'이다. 따라서 &num은 변수num의 주소 값이 반환되며,<br/> 이를 포인터 변수 pnum에 저장한다.<br/>
 `pnum = &num;`
