--- a/자료구조/BackJoon/소수판별_알고리즘.md
+++ b/자료구조/BackJoon/소수판별_알고리즘.md
@@ -1,10 +1,10 @@
 ### 에라토스테네스의 체(소수판별 알고리즘)
 * 고대 그리스의 수학자 에라토스테네스가 만들어 낸 소수를 찾는 방법 및 알고리즘
 * [지수함수 f(x)= x/1P(x)](https://namu.wiki/w/%EC%97%90%EB%9D%BC%ED%86%A0%EC%8A%A4%ED%85%8C%EB%84%A4%EC%8A%A4%EC%9D%98%20%EC%B2%B4) 의 수열을 표로 시각화
-* 논리
-  * n의 값이 소수가 아닌 경우, n은 두 개 이상의 양의 약수를 가진다.
-  * n보다 큰 약수 a는 모두 n이하의 약수b와 짝을 이룬다.
-  * n의 제곱근보다 큰 수까지 검사할 필요가 없는 이유는 n이 b로 나누어 떨어진다면, b는 n의 제곱근 이하의 수이고 <br/>a는 n의 제곱근 이상의 수이다.
+* 적용 논리
+  * n의 값이 소수가 아닌 경우, n은 두 개 이상의 양의 약수를 가진다(약수의 쌍).
+  *  n의 제곱근 보다 큰 약수 a는 모두  n의 제곱근 이하의 약수 b와 짝을 이룬다(제곱근의 기준).
+  * n의 제곱근보다 큰 수까지 검사할 필요가 없는 이유는 n이 b로 나누어 떨어진다면, b는 n의 제곱근 이하의 수이고 <br/>a는 n의 제곱근 이상의 수를 가지기 때문이다.
   * n의 값이 나누었을 때, 0이 아닌(나누어 떨어지지 않는) 경우에는 소수이다.
 * 특징
   * 특정 범위 내의 모든 소수를 쉽고 빠르게 구할 수 있다.
