--- a/자료구조/learn/재귀.md
+++ b/자료구조/learn/재귀.md
@@ -31,7 +31,7 @@ int Factorial(int n)
 }
 ```
  
-#### 2. 피보나치 수열(Fibonacci Sequence)
+#### 2-1. 피보나치 수열(Fibonacci Sequence)
 * 첫째 및 둘째 항이 1이며 그 뒤의 모든 항은 바로 앞 두 항의 합인 수열 또는 재귀적인 형태를 띠는 대표적인 수열
 
 ```cpp
@@ -50,6 +50,7 @@ int Fibo(int n)     //피보나치 수열의 n번째 값 반환(반환한 값을
     return Fibo(n-1) + Fibo(n-2);
 }
 ```
+
 
 #### 3. 이진 탐색 알고리즘(BinarySearch Algorithm)
 * [이진 탐색 알고리즘](https://github.com/YouAndMeToo3323/TIL/blob/main/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0/learn/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0%EC%99%80_%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98.md#2-2-%EC%9D%B4%EC%A7%84-%ED%83%90%EC%83%89-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98binary-search-algorithm)
@@ -117,6 +118,49 @@ void HanoiTowerMove(int num, char from, char by, char to)
    HanoiTowerMove(num-1, by, from, to);  //3단계
 }
 ```
+
+#### 5. 메모이제이션(Memoization)
+* 동적 계획법의 핵심이 되는 기술로서 결국 메모리라는 공간 비용을 투입해 계산에 소요되는 시간 비용을 줄이는 방식
+* 즉, 하위 문제에 대한 정답을 계산했는지 확인해가며 하향식으로 문제를 자연스럽게 풀어나가는 방식
+* 메모아이제이션은 아무래도 학술적인 용어라 실제 현장에서는 캐싱(caching)이라는 단어를 더 많이 사용한다.
+
+
+```cpp
+#include <stdio.h>
+
+int memo[1000];//정적 선언
+
+// 메모이제이션을 이용한 피보나치 수열 계산
+int fibonacci(int n) {
+    if (n <= 1) {
+        return n;
+    }
+    // 이미 계산된 값이면 배열에서 반환
+    if (memo[n] != -1) {
+        return memo[n];
+    }
+    // 계산된 값을 배열에 저장하고 반환
+    memo[n] = fibonacci(n - 1) + fibonacci(n - 2);
+    return memo[n];
+}
+
+int main() {
+    // 배열을 -1로 초기화 (아직 계산되지 않은 값)
+    for (int i = 0; i < 1000; i++) {
+        memo[i] = -1;
+    }
+
+    int n = 10;
+    printf("Fibonacci of %d is %d\n", n, fibonacci(n));
+    return 0;
+}
+```
+
+
+
+
+
+
 
 
 
