--- a/자료구조/learn/재귀.md
+++ b/자료구조/learn/재귀.md
@@ -124,7 +124,6 @@ void HanoiTowerMove(int num, char from, char by, char to)
 * 즉, 하위 문제에 대한 정답을 계산했는지 확인해가며 하향식으로 문제를 자연스럽게 풀어나가는 방식
 * 메모아이제이션은 아무래도 학술적인 용어라 실제 현장에서는 캐싱(caching)이라는 단어를 더 많이 사용한다.
 
-
 ```cpp
 #include <stdio.h>
 
@@ -134,7 +133,7 @@ int memo[1000];//정적 선언
 int fibonacci(int n) {
     if (n <= 1) {
         return n;
-    }
+    }//fibonacci(0) = 0, fibonacci(1) = 1 이므로 n 출력
     // 이미 계산된 값이면 배열에서 반환
     if (memo[n] != -1) {
         return memo[n];
