--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -48,10 +48,12 @@ free(ptr4);
 int* ptr1 = (int*)malloc(sizeof(int));
 double* ptr2 = (double*)malloc(sizeof(double));
 int* ptr3 = (int*)malloc(sizeof(int)*7)
+struct Point* ptr4 = (struct Point*)malloc(sizeof(struct Point));
 
 free(ptr1);
 free(ptr2);
 free(ptr3);
+free(ptr4);
 ```
 
 * 동적할당이 필요한 이유
