--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -168,7 +168,7 @@ for (int i = 0; i < 3; i++)
 }
 ```
 ---
-### 	입출력 이외의 문자열 관련 함수
+### 입출력 이외의 문자열 관련 함수
 #### 문자열의 길이를 반환하는 함수(strlen)
 * strlen은 **인자로 전달된 문자열의 길이를 반환하는 함수**로서 문자열과 관련해서 많이 사용되는 대표적인 함수이다.
 * **전달된 문자열의 길이를 반환하되, 널 문자는 길이에 포함하지 않는다.**
@@ -183,8 +183,16 @@ printf("%u \n",strlen(str)); 	//str은 문자열
 //fget함수호출로 입력한 문자열에 존재하는 개행(\n)을 strlen함수를 이용하여 제거할 수 있다.
 void RemoveBSN(char str[])
 {
-	int len = strlen(str);
+	int len = (int)strlen(str);
 	str[len - 1] = 0;
+}
+
+//main함수에서 조건문으로 사용할 경우
+int len = (int)strlen(str);
+if(str[len-1] == '\n';)	//개행이 존재할 경우
+{
+  str[len-1] = 0;	//개행을 0값으로 전환
+  len = len -1;		//개행 삭제로 인한 문자열 길이 수정
 }
 ```
 #### 문자열을 복사하는 함수(strcpy, strncpy)
