--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -159,7 +159,7 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |va_end(x)|참조자가 가변인자를 참조하지 않도록 해제(x는 변수)|
 
 #### 6. string.h
-* C 언어의 표준 라이브러리 헤더 파일 중 하나로서 문자열을 처리하기 위한 다양한 함수들을 정의한다.
+* C 언어의 표준 라이브러리 헤더 파일 중 하나로서 메모리 처리를 효율적으로 수행하거나 문자열을 처리하기 위한 다양한 함수들을 정의한다.
 * 문자열 복사, 연결, 비교, 검색, 길이 계산 등의 작업을 수행할 수 있다.([문자열과 스트림](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%EC%8A%A4%ED%8A%B8%EB%A6%BC%EA%B3%BC_%EB%8D%B0%EC%9D%B4%ED%84%B0%EC%9D%98_%EC%9D%B4%EB%8F%99.md))
 
 |함수 원형|기능|
@@ -174,8 +174,18 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |char *strchr(const char *str, int c);|문자열에서 특정 문자의 첫 번째 발생 위치를 탐색|
 |char *strrchr(const char *str, int c);|문자열에서 특정 문자의 마지막 발생 위치를 탐색|
 |char *strstr(const char *haystack, const char *needle);|문자열에서 다른 문자열의 첫 번째 발생 위치를 탐색|
-|char *strdup(const char *str);|문자열을 복사하여 새로 할당된 메모리에 저장|
+|size_t strcspn(const char *str1, const char *str2);|첫 번째 문자열에서 두 번째 문자열에 포함된 문자가 처음으로 나타나는 위치|
+|size_t strspn(const char *str1, const char *str2);|첫 번째 문자열에서 두 번째 문자열에 포함된 문자로만 구성된 초기 부분의 길이|
+|char *strdup(const char *str);|문자열을 복사하여(POSIX) 새로 할당된 메모리에 저장|
 |char *strtok(char *str, const char *delim);|문자열을 특정 구분자를 기준으로 나눔|
+
+|함수 원형|기능|
+|-|-|
+|void *memcpy(void *dest, const void *src, size_t n);|메모리 복사|
+|void *memmove(void *dest, const void *src, size_t n);|겹치는 메모리 영역 복사|
+|void *memset(void *str, int c, size_t n);|메모리 설정|
+|int memcmp(const void *str1, const void *str2, size_t n);|메모리 비교|
+|char *strerror(int errnum);|에러 메시지 문자열 반환|
 
 * const char *str : 호출할 문자열을 가리키는 포인터
 * char *dest : 문자열을 저장또는 복사할 대상 버퍼를 가리키는 포인터
@@ -184,9 +194,18 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 * int c : 찾을 문자.'char'로 변환된다.
 * const char *haystack : 검색할 대상 문자열을 가리키는 포인터
 * const char *needle : 찾을 하위 문자열을 가리키는 포인터
+* const char *str1 : 탐색할 대상 문자열을 가리키는 포인터
+* const char *str2 : str1에 제공하는 문자를 가리키는 포인터
 * char *str : 분할할 원본 문자열을 가리키는 포인터. 처음 호출할 때는 이 인수에 문자열을 전달하고, 이후 호출할 때는 NULL을 전달한다.
 * const char *delim : 분자 문자열을 가리키는 포인터로서 분할할 때 사용할 구분자 문자들을 포함한다.
+* int errnum : 오류를 나타내는 정수 값
 
+#### 7. errno.h
+* 이 헤더 파일은 C 표준 라이브러리의 일부로서 프로그램 실행 중 발생하는 오류를 처리하는 데 사용되는 매크로와 선언을 포함하고 있다.
+* 주로 시스템 콜이나 라이브러리 함수 호출 시 발생하는 오류 코드를 제공하여 프로그램이 적절한 오류 처리를 할 수 있도록 한다.
+* 'errno' 매크로
+  * errno 매크로는 전역 변수로서 오류가 발생하면 해당 오류 코드를 저장하며 각 오류는 정수 값으로 표현된다.
+  * 초기화된 값은 0이며, 오류가 발생할 때마다 적절한 오류 코드로 설정된다.
 
 
 
