--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -204,9 +204,16 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 * 이 헤더 파일은 C 표준 라이브러리의 일부로서 프로그램 실행 중 발생하는 오류를 처리하는 데 사용되는 매크로와 선언을 포함하고 있다.
 * 주로 시스템 콜이나 라이브러리 함수 호출 시 발생하는 오류 코드를 제공하여 프로그램이 적절한 오류 처리를 할 수 있도록 한다.
 * 'errno' 매크로
-  * errno 매크로는 전역 변수로서 오류가 발생하면 해당 오류 코드를 저장하며 각 오류는 정수 값으로 표현된다.
-  * 초기화된 값은 0이며, 오류가 발생할 때마다 적절한 오류 코드로 설정된다.
+  * errno 매크로는 전역 변수로서 초기화된 값은 0이며, 오류가 발생하면 해당 오류 코드를 저장하며 각 오류는 정수 값(적절한 오류코드)으로 표현된다.
 
+|오류 코드|의미|오류 코드|의미|오류 코드|의미|
+|-|-|-|-|-|-|
+|E2BIG|인수가 너무 많음|EACCES|권한 거부|EAGAIN|자원이 일시적으로 사용 불가|
+|EBADF|잘못된 파일 디스크립터|ECHILD|자식 프로세스가 없음|EDEADLK|자원 데드락 회피|
+|EEXIST|파일이 이미 존재함|EFAULT|잘못된 메모리 주소|EINVAL|잘못된 인수|
+|EISDIR|디렉토리인 파일에 대한 잘못된 작업|ENFILE|시스템 파일 테이블 가득 참|ENODEV|장치가 없음|
+|ENOMEM|메모리 부족|ENOSPC|디스크 공간 부족|ENOTDIR|디렉토리가 아님|
+|EPERM|운영이 허락되지 않음|EPIPE|파이프가 깨짐|
 
 
 
