--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -8,22 +8,31 @@
   * 동일한 데이터 타입 :  동일한 데이터 타입의 요소들을 저장한다.
   * 크기 가변성 : 리스트는 요소를 추가하거나 제거할 수 있어 크기가 유동적이다.
   * 빠른 인덱싱 : 인덱스를 통해 요소에 빠르게 접근할 수 있다.
+* 리스트의 주요 기능
+  1. 초기화 : 리스트를 사용하기 전에 리스트 구조를 초기화하고 필요한 메모리를 할당
+  2. 삽입 : 리스트의 특정 위치에 요소를 추가
+  3. 삭제 : 리스트의 특정 위치에 있는 요소를 제거
+  4. 탐색 : 리스트에서 특정 요소를 탐색
+  5. 조회 : 리스트의 특정 위치에 있는 요소를 반환
+  6. 메모리 해제 : 리스트가 더 이상 필요 없을 때 할당된 메모리를 해제
+
 * 구현방법
   * 배열 기반 리스트
   * 연결 리스트
 
 
-#### 2-1. 배열 기반 리스트
-* 
+#### 2-1. 배열 기반 리스트(순차리스트)
+* 고정된 크기의 배열을 사용하여 요소를 저장하며, 배열이 가득 차면 더 큰 배열로 복사하여 확장한다.
 * 장점
   * 데이터의 참조가 쉽다. 인덱스 값을 기준으로 어디든 한 번에 참조가 가능하다.
 * 단점
   * 배열의 길이가 초기에 결정되어야 한다. 확장이 필요할 경우, 동적할당이고 realloc함수를 이용하여 확장한다.
-  * 삭제의 과정에서 데이터의 이동(복사)가 매우 빈번히 일어난다.
+  * 요소 삽입과 삭제의 과정에서 데이터의 이동(복사 또는 재배치)가 매우 빈번히 일어난다.
 
 
 #### 2-2. 연결 리스트
-
+* 각 요소가 노드로 구현되며, 노드는 데이터와 다음 노드에 대한 참조(포인터)를 가진다.
+* 
 
 
 
