--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -8,7 +8,7 @@
   * 동일한 데이터 타입 :  동일한 데이터 타입의 요소들을 저장한다.
   * 크기 가변성 : 리스트는 요소를 추가하거나 제거할 수 있어 크기가 유동적이다.
   * 빠른 인덱싱 : 인덱스를 통해 요소에 빠르게 접근할 수 있다.
-* 리스트의 주요 기능
+* 리스트의 주요 연산
   1. 초기화 : 리스트를 사용하기 전에 리스트 구조를 초기화하고 필요한 메모리를 할당
   2. 삽입 : 리스트의 특정 위치에 요소를 추가
   3. 삭제 : 리스트의 특정 위치에 있는 요소를 제거
