--- a/C/learn/자료형과_상수.md
+++ b/C/learn/자료형과_상수.md
@@ -44,7 +44,13 @@ double num3 = 2.12 + 7.49	//2.12와 7.49는 상수, num3은 변수
 ----
 
 ### printf함수
+* printf() 함수는 C언어의 표준 출력 함수로, 여러 종류의 데이터(data)를 다양한 서식에 맞춰 출력할 수 있다.
+* printf() 함수의 f는 formatted의 약자이며, 서식화된 출력을 지원한다는 의미
+* 출력할 데이터를 어떤 서식에 맞춰 출력할지 서식 지정자(format specifier)를 통해 직접 지정할 수 있다.
 
+```cpp
+int printf(const char * restrict format, ...);
+```
 * 특수문자의 종류
 
 |특수문자|의미하는바|특수문자|의미하는바|
@@ -67,7 +73,7 @@ double num3 = 2.12 + 7.49	//2.12와 7.49는 상수, num3은 변수
 |%Lf|long double|10진수 방식의 부동소수점 실수|%#x|unsigned int|부호 없는 16지수 형태 정수<br/>(ex : 0xd)|
 |%c|char, short, int|값에 대응하는 문자|%e, %E|float, double|e또는 E방식의 부동소수점 실수|
 |%s|char*|문자열|%g, %G|float, double|값에 따라 %f와 %e 사이에서 선택|
-|%p|void*|포인터의 주소 값| | | |
+|%p|void*|포인터의 주소 값|%%| |퍼센트(%) 기호 출력|
 
 * 필드 폭을 지정하여 정돈된 출력 보이기
 
@@ -77,7 +83,17 @@ double num3 = 2.12 + 7.49	//2.12와 7.49는 상수, num3은 변수
 ```
 
 ### scanf함수
-* 표준 입력에서 형식화된 데이터를 읽어들이는 함수
+* 표준 입력에서 형식화된 데이터를 읽어들이는 함수(C언어의 표준 입력 함수)로, 사용자로부터 다양한 데이터를 다양한 서식에 맞춰 입력받을 수 있게 해준다.
+* scanf() 함수의 f는 formatted의 약자이며, 서식화된 입력을 받는다는 의미
+* 입력받은 데이터를 어떤 서식으로 변환할지 서식 지정자(format specifier)를 통해 직접 지정할 수 있다.
+* 여러 개의 서식 지정자를 동시에 사용하여, 여러 데이터를 서로 다른 서식으로 한 번에 입력받을 수 있다.
+* 주소 연산자(&)는 입력받은 데이터를 뒤에 나오는 변수에 저장하라는 의미
+
+```cpp
+int scanf(const char * restrict format, ...);
+int scanf("%d %d", &num1, &num2);
+```
+
 * 서식문자의 종류와 의미
 
 |서식문자|입력 대상|입력 형태|서식문자|입력 대상|입력 형태|
