--- a/C/learn/자료형과_상수.md
+++ b/C/learn/자료형과_상수.md
@@ -81,6 +81,17 @@ int printf(const char * restrict format, ...);
 %8d	필드 폭을 8칸 확보하고, 오른쪽 정렬해서 출력을 진행
 %-8d	필드 폭을 8칸 확보하고, 왼쪽 정렬해서 출력을 진행
 ```
+#### sprintf, snprintf함수
+* 패킷 통신을 하거나, buffer에 원하는 문자열을 삽입, 이어붙이기 할때 자주사용되는 함수로서 sprintf의 s는 문자열(string)을 뜻한다.
+
+```cpp
+//char* dest : 결과 문자열을 저장할 버퍼의 포인터
+//size_t size : 버퍼의 크기. snprintf는 이 크기를 넘지 않도록 결과 문자열을 저장
+//const char* format : 형식 문자열. 출력할 내용을 서식 지정자와 함께 포함한다.
+//... : 형식 문자열에서 지정한 서식 지정자에 대응하는 인수들
+int sprintf ( char * dest, const char * format, ... );
+int snprintf ( char * dest, size_t size, const char * format, ... );
+```
 
 ### scanf함수
 * 표준 입력에서 형식화된 데이터를 읽어들이는 함수(C언어의 표준 입력 함수)로, 사용자로부터 다양한 데이터를 다양한 서식에 맞춰 입력받을 수 있게 해준다.
