--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -161,6 +161,7 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 #### 6. string.h
 * C 언어의 표준 라이브러리 헤더 파일 중 하나로서 메모리 처리를 효율적으로 수행하거나 문자열을 처리하기 위한 다양한 함수들을 정의한다.
 * 문자열 복사, 연결, 비교, 검색, 길이 계산 등의 작업을 수행할 수 있다.([문자열과 스트림](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%EC%8A%A4%ED%8A%B8%EB%A6%BC%EA%B3%BC_%EB%8D%B0%EC%9D%B4%ED%84%B0%EC%9D%98_%EC%9D%B4%EB%8F%99.md))
+* strstr, strspn 함수 등은 null 문자가 없는 경우 문자열의 끝을 찾을 수 없기 때문에 예상치 못한 동작이나 프로그램 충돌이 발생할 수 있다.<br/>(문자열의 끝을 나타내기 위해 null 문자('\0')가 사용)
 
 |함수 원형|기능|
 |-|-|
