--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -54,6 +54,22 @@ free(ptr1);
 free(ptr2);
 free(ptr3);
 free(ptr4);
+
+//이중 포인터 배열 메모리 할당
+char** ptr5 = (char**)malloc(sizeof(char*));
+
+//반복문을 이용하여 N만큼 메모리 할당
+for (int i = 0; i<N; i++)
+{
+  ptr5[i] = (char*)malloc(sizeof(char));
+}
+
+//이중 포인터 배열 메모리 해제
+for (int i = 0; i<N; i++)
+{
+  free(ptr5[i]);
+}
+free(ptr5);
 ```
 
 * 동적할당이 필요한 이유
