--- a/자료구조/learn/재귀.md
+++ b/자료구조/learn/재귀.md
@@ -131,14 +131,15 @@ int memo[1000];//정적 선언
 
 // 메모이제이션을 이용한 피보나치 수열 계산
 int fibonacci(int n) {
+    //fibonacci(0) = 0, fibonacci(1) = 1 이므로 n을 반환
     if (n <= 1) {
         return n;
-    }//fibonacci(0) = 0, fibonacci(1) = 1 이므로 n 출력
-    // 이미 계산된 값이면 배열에서 반환
+    }
+    // 이미 계산된 값이면 해당 배열 값 memo[n]을 반환
     if (memo[n] != -1) {
         return memo[n];
     }
-    // 계산된 값을 배열에 저장하고 반환
+    // 계산된 값을 배열에 저장하고 재귀호출
     memo[n] = fibonacci(n - 1) + fibonacci(n - 2);
     return memo[n];
 }
