--- a/자료구조/BackJoon/동적_계획법.md
+++ b/자료구조/BackJoon/동적_계획법.md
@@ -15,39 +15,123 @@
 * 각 하위 문제의 결과를 메모리에 저장하여, 동일한 하위 문제가 다시 나타날 때 저장된 결과를 사용
 ```cpp
 //피보나치 수열 (메모이제이션을 이용한 재귀)
+//자세한 내용은 메모이제이션 링크 확인
+#include <stdio.h>
+#define MAX 100
 
+int memo[MAX];
 
-
+int fib(int n) {
+    if (n <= 1) {
+        return n;
+    }
+    if (memo[n] != -1) {
+        return memo[n];
+    }
+    memo[n] = fib(n-1) + fib(n-2);
+    return memo[n];
+}
 ```
 
-##### 2-2. 바텀업 접근법(Bottom-Up Approach)
+##### 2-2. 바텀업 접근법(Bottom-Up Approach, 타뷸레이션)
 * 반복문을 사용하여 하위 문제부터 상위 문제로 차례대로 해결
 * 하위 문제의 결과를 배열 등에 저장하여, 상위 문제를 해결할 때 이를 참조
 
 ```cpp
-//피보나치 수열 (반복문을 이용한 DP)
+//피보나치 수열 (반복문을 이용한 DP, 타뷸레이션)
+#include <stdio.h>
 
-
-
-
-
+int fib(int n) {
+    int dp[n+1];
+    dp[0] = 0;
+    dp[1] = 1;
+    for (int i = 2; i <= n; i++) {
+        dp[i] = dp[i-1] + dp[i-2];
+    }
+    return dp[n];
+}
 ```
 
 #### 3. 동적 계획법의 예시 문제들
 ##### 3-1. 피보나치 수열
 * F(n) = F(n-1) + F(n-2)의 형태로 하위 문제들이 반복
-* 중복 계산을 피하기 위해 메모이제이션 또는 바텀업 방식 사용
-
+* 중복 계산을 피하기 위해 메모이제이션 또는 바텀업 방식 사용 **(위의 내용 참고)**
 
 ##### 3-2. 최장 공통 부분 수열(Longest Common Subsequence, LCS)
 * 두 문자열의 최장 공통 부분 수열을 찾는 문제
-* 두 문자열의 길이가 m과 n일 때, O(mn)의 시간 복잡도를 가짐
+* 두 문자열의 길이가 m과 n일 때, O(m^n)의 시간 복잡도를 가짐
+```cpp
+#include <stdio.h>
+#include <string.h>
+
+//
+int max(int a, int b) {
+    return (a > b) ? a : b;
+}
+//
+int lcs(char *X, char *Y, int m, int n) {
+    int dp[m+1][n+1]; 
+    for (int i = 0; i <= m; i++) {
+        for (int j = 0; j <= n; j++) {
+            if (i == 0 || j == 0) {
+                dp[i][j] = 0;
+            } else if (X[i-1] == Y[j-1]) {
+                dp[i][j] = dp[i-1][j-1] + 1;
+            } else {
+                dp[i][j] = max(dp[i-1][j], dp[i][j-1]);
+            }
+        }
+    }
+    return dp[m][n];
+}
+
+int main() {
+    char X[] = "ABCBDAB";
+    char Y[] = "BDCAB";
+    int m = strlen(X); //X에 대한 길이 반환
+    int n = strlen(Y); //Y에 대한 길이 반환
+    printf("Length of LCS is %d\n", lcs(X, Y, m, n));
+    return 0;
+}
+```
 
 
 ##### 3-3. 배낭 문제(Knapsack Problem)
 * 제한된 무게 내에서 최대 가치를 가지는 물건을 고르는 문제
 * 0/1 배낭 문제와 무한 배낭 문제로 나뉨
 
+```cpp
+#include <stdio.h>
+
+int max(int a, int b) {
+    return (a > b) ? a : b;
+}
+
+int knapsack(int W, int wt[], int val[], int n) {
+    int dp[n+1][W+1];
+    for (int i = 0; i <= n; i++) {
+        for (int w = 0; w <= W; w++) {
+            if (i == 0 || w == 0) {
+                dp[i][w] = 0;
+            } else if (wt[i-1] <= w) {
+                dp[i][w] = max(val[i-1] + dp[i-1][w-wt[i-1]], dp[i-1][w]);
+            } else {
+                dp[i][w] = dp[i-1][w];
+            }
+        }
+    }
+    return dp[n][W];
+}
+
+int main() {
+    int val[] = {60, 100, 120};
+    int wt[] = {10, 20, 30};
+    int W = 50;
+    int n = sizeof(val) / sizeof(val[0]);
+    printf("Maximum value in Knapsack = %d\n", knapsack(W, wt, val, n));
+    return 0;
+}
+```
 
 
 ##### 3-4. 최단 경로 문제(Shortest Path Problem)
