--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -24,17 +24,18 @@
 #### 2-1. 배열 기반 리스트(순차리스트)
 * 고정된 크기의 배열을 사용하여 요소를 저장하며, 배열이 가득 차면 더 큰 배열로 복사하여 확장한다.
 * 장점
-  * 데이터의 참조가 쉽다. 인덱스 값을 기준으로 어디든 한 번에 참조가 가능하다.
+  * 데이터의 참조가 쉽다. 인덱스 값을 기준으로 어디든 한 번에 참조가 가능하다. (O(1))
 * 단점
   * 배열의 길이가 초기에 결정되어야 한다. 확장이 필요할 경우, 동적할당이고 realloc함수를 이용하여 확장한다.
-  * 요소 삽입과 삭제의 과정에서 데이터의 이동(복사 또는 재배치)가 매우 빈번히 일어난다.
+  * 요소 삽입과 삭제의 과정에서 데이터의 이동(복사 또는 재배치)가 매우 빈번히 일어난다. (O(n))
 
 
 #### 2-2. 연결 리스트
 * 각 요소가 노드로 구현되며, 노드는 데이터와 다음 노드에 대한 참조(포인터)를 가진다.
-* 
-
-
+* 장점
+  * 요소의 삽입과 삭제가 빠르다. (O(1))
+* 단점
+  * 인덱스를 통한 접근이 느리다. (O(n))
 
 
 
