--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -29,6 +29,65 @@
   * 배열의 길이가 초기에 결정되어야 한다. 확장이 필요할 경우, 동적할당이고 realloc함수를 이용하여 확장한다.
   * 요소 삽입과 삭제의 과정에서 데이터의 이동(복사 또는 재배치)가 매우 빈번히 일어난다. (O(n))
 
+```cpp
+//초기화
+void ListInit(List* plist) 
+{
+	(plist->numOfData) = 0;				//리스트에 저장된 데이터의 수를 0으로 선언
+	(plist->curPosition) = -1;			//배열은 0부터 시작하므로 위치값은 -1부터 시작
+}
+
+//삽입
+void LInsert(List* plist, LData data) 
+{
+	if (plist->numOfData >= LIST_LEN) 
+	{
+		printf("저장이 불가능합니다.\n");
+		return;
+	}//저장소보다 데이터량이 클경우 함수 종료
+
+	plist->arr[plist->numOfData] = data;		//배열에 데이터 저장
+	(plist->numOfData)++;				//plist에 저장된 데이터의 수 증가
+}
+
+//삭제
+LData LRemove(List* plist) 
+{
+	int rpos = plist->curPosition;			//plist의 현재 참조위치
+	int num = plist->numOfData;			//plist의 현재 데이터의 수
+	int i;
+	LData rdata = plist->arr[rpos];
+
+	for (i = rpos; i < num - 1; i++) 
+	{
+		plist->arr[i] = plist->arr[i + 1];	//plist의 현재 데이터를 한 칸씩 이동
+	}
+	(plist->curPosition)--;				//plist의 현재 참조위치 삭제
+	(plist->numOfData)--;				//plist의 현재 데이터의 수 삭제
+
+	return rdata;
+}
+
+//탐색 및 조회
+int LFirst(List* plist, LData* pdata) //첫 데이터 참조
+{
+	if (plist->numOfData == 0)			//plist에 데이터가 없을 경우(0)
+		return FALSE;
+
+	(plist->curPosition) = 0;			//plist의 참조위치는 0
+	*pdata = plist->arr[plist->curPosition];	//plist의 참조위치에 해당하는 데이터 출력
+	return TRUE;
+}
+int LNext(List* plist, LData* pdata) 	//두 번째 이후 데이터 참조
+{
+	if (plist->curPosition >= plist->numOfData - 1)	//plist의 현재 참조위치보다 현재 저장된 데이터의 수가 적으면(참조위치가 0부터 시작하므로 데이터의수 -1)
+		return FALSE;
+
+	(plist->curPosition)++;				//plist의 참조위치 증가
+	*pdata = plist->arr[plist->curPosition];	//plist의 참조위치에 해당하는 데이터 출력
+	return TRUE;
+}
+```
 
 #### 2-2. 연결 리스트
 * 각 요소가 노드로 구현되며, 노드는 데이터와 다음 노드에 대한 참조(포인터)를 가진다.
