--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -30,63 +30,81 @@
   * 요소 삽입과 삭제의 과정에서 데이터의 이동(복사 또는 재배치)가 매우 빈번히 일어난다. (O(n))
 
 ```cpp
+//구조체 정의
+typedef struct ArrayList {
+    int *array;		//리스트의 배열
+    int size;		//참조위치
+    int capacity;	//저장공간
+} ArrayList;
+
 //초기화
-void ListInit(List* plist) 
-{
-	(plist->numOfData) = 0;				//리스트에 저장된 데이터의 수를 0으로 선언
-	(plist->curPosition) = -1;			//배열은 0부터 시작하므로 위치값은 -1부터 시작
+ArrayList* createList(int initialCapacity) {
+    ArrayList* list = (ArrayList*)malloc(sizeof(ArrayList));	//리스트 선언 및 초기화
+    list->array = (int*)malloc(initialCapacity * sizeof(int));	//리스트의 배열
+    list->size = 0;
+    list->capacity = initialCapacity;
+    return list;
+}
+
+// 배열크기 변환
+void resizeList(ArrayList* list) {
+    list->capacity *= 2;
+    list->array = (int*)realloc(list->array, list->capacity * sizeof(int));
 }
 
 //삽입
-void LInsert(List* plist, LData data) 
-{
-	if (plist->numOfData >= LIST_LEN) 
-	{
-		printf("저장이 불가능합니다.\n");
-		return;
-	}//저장소보다 데이터량이 클경우 함수 종료
-
-	plist->arr[plist->numOfData] = data;		//배열에 데이터 저장
-	(plist->numOfData)++;				//plist에 저장된 데이터의 수 증가
+void addElement(ArrayList* list, int element) {
+    if (list->size == list->capacity) {
+        resizeList(list);
+    }
+    list->array[list->size++] = element;
 }
 
 //삭제
-LData LRemove(List* plist) 
-{
-	int rpos = plist->curPosition;			//plist의 현재 참조위치
-	int num = plist->numOfData;			//plist의 현재 데이터의 수
-	int i;
-	LData rdata = plist->arr[rpos];
-
-	for (i = rpos; i < num - 1; i++) 
-	{
-		plist->arr[i] = plist->arr[i + 1];	//plist의 현재 데이터를 한 칸씩 이동
-	}
-	(plist->curPosition)--;				//plist의 현재 참조위치 삭제
-	(plist->numOfData)--;				//plist의 현재 데이터의 수 삭제
-
-	return rdata;
+void removeElement(ArrayList* list, int index) {
+    if (index < 0 || index >= list->size) {
+        printf("Index out of bounds\n");
+        return;
+    }
+    for (int i = index; i < list->size - 1; i++) {
+        list->array[i] = list->array[i + 1];
+    }
+    list->size--;
 }
 
-//탐색 및 조회
-int LFirst(List* plist, LData* pdata) //첫 데이터 참조
-{
-	if (plist->numOfData == 0)			//plist에 데이터가 없을 경우(0)
-		return FALSE;
-
-	(plist->curPosition) = 0;			//plist의 참조위치는 0
-	*pdata = plist->arr[plist->curPosition];	//plist의 참조위치에 해당하는 데이터 출력
-	return TRUE;
+//조회
+int getElement(ArrayList* list, int index) {
+    if (index < 0 || index >= list->size) {
+        printf("Index out of bounds\n");
+        return -1;
+    }
+    return list->array[index];
 }
-int LNext(List* plist, LData* pdata) 	//두 번째 이후 데이터 참조
-{
-	if (plist->curPosition >= plist->numOfData - 1)	//plist의 현재 참조위치보다 현재 저장된 데이터의 수가 적으면(참조위치가 0부터 시작하므로 데이터의수 -1)
-		return FALSE;
 
-	(plist->curPosition)++;				//plist의 참조위치 증가
-	*pdata = plist->arr[plist->curPosition];	//plist의 참조위치에 해당하는 데이터 출력
-	return TRUE;
+//탐색
+int findElement(ArrayList* list, int element) {
+    for (int i = 0; i < list->size; i++) {
+        if (list->array[i] == element) {
+            return i;
+        }
+    }
+    return -1;
 }
+
+//출력
+void printList(ArrayList* list) {
+    for (int i = 0; i < list->size; i++) {
+        printf("%d ", list->array[i]);
+    }
+    printf("\n");
+}
+
+//메모리 해제
+void freeList(ArrayList* list) {
+    free(list->array);
+    free(list);
+}
+
 ```
 
 #### 2-2. 연결 리스트
