--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -32,15 +32,15 @@
 ```cpp
 //구조체 정의
 typedef struct ArrayList {
-    int *array;		//리스트의 배열
-    int size;		//참조위치
-    int capacity;	//저장공간
+    int *array;		//리스트의 저장소인 배열
+    int size;		//저장된 데이터의 수
+    int capacity;	//저장소 배열의 저장공간
 } ArrayList;
 
 //초기화
 ArrayList* createList(int initialCapacity) {
     ArrayList* list = (ArrayList*)malloc(sizeof(ArrayList));	//리스트 선언 및 초기화
-    list->array = (int*)malloc(initialCapacity * sizeof(int));	//리스트의 배열
+    list->array = (int*)malloc(initialCapacity * sizeof(int));	//리스트 배열의 초기화 
     list->size = 0;
     list->capacity = initialCapacity;
     return list;
