--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -114,7 +114,22 @@ void freeList(ArrayList* list) {
 * 단점
   * 인덱스를 통한 접근이 느리다. (O(n))
 
+```cpp
+typedef struct Node {
+    int data;
+    struct Node* next;
+} Node;
 
+typedef struct LinkedList {
+    Node* head;
+} LinkedList;
+
+LinkedList* createList() {
+    LinkedList* list = (LinkedList*)malloc(sizeof(LinkedList));
+    list->head = NULL;
+    return list;
+}
+```
 
 
 
