--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -115,6 +115,7 @@ void freeList(ArrayList* list) {
   * 인덱스를 통한 접근이 느리다. (O(n))
 
 ```cpp
+//1
 typedef struct Node {
     int data;
     struct Node* next;
@@ -129,6 +130,30 @@ LinkedList* createList() {
     list->head = NULL;
     return list;
 }
+
+//2
+void insertAtBeginning(LinkedList* list, int data) {
+    Node* newNode = (Node*)malloc(sizeof(Node));
+    newNode->data = data;
+    newNode->next = list->head;
+    list->head = newNode;
+}
+
+void insertAtEnd(LinkedList* list, int data) {
+    Node* newNode = (Node*)malloc(sizeof(Node));
+    newNode->data = data;
+    newNode->next = NULL;
+    if (list->head == NULL) {
+        list->head = newNode;
+        return;
+    }
+    Node* temp = list->head;
+    while (temp->next != NULL) {
+        temp = temp->next;
+    }
+    temp->next = newNode;
+}
+
 ```
 
 
