--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -154,6 +154,28 @@ void insertAtEnd(LinkedList* list, int data) {
     temp->next = newNode;
 }
 
+//3
+void deleteNode(LinkedList* list, int key) {
+    Node* temp = list->head;
+    Node* prev = NULL;
+
+    if (temp != NULL && temp->data == key) {
+        list->head = temp->next;
+        free(temp);
+        return;
+    }
+
+    while (temp != NULL && temp->data != key) {
+        prev = temp;
+        temp = temp->next;
+    }
+
+    if (temp == NULL) return;
+
+    prev->next = temp->next;
+    free(temp);
+}
+
 ```
 
 
