--- a/자료구조/BackJoon/동적_계획법.md
+++ b/자료구조/BackJoon/동적_계획법.md
@@ -132,7 +132,42 @@ int main() {
     return 0;
 }
 ```
+* 백준 1463 - 1로 만들기
+```cpp
+#include <stdio.h>
+#define min(a, b) (a < b ? a : b) //최소값을 구하는 매크로
 
+/*
+1. 현재 숫자에서 1을 빼기
+2. 현재 숫자를 3으로 나누기 (나머지가 0일 때만 가능)
+3. 현재 숫자를 2로 나누기 (나머지가 0일 때만 가능)
+*/
+int main()
+{
+    int dp[1000001]; //목표 값에 대한 최소 연산횟수을 저장할 배열
+    int i, n; //n : 목표 숫자, i : 
+    scanf("%d", &n);
+    dp[2] = 1; //목표 값이 2일 때 최소 연산횟수
+    dp[3] = 1; //목표 값이 3일 때 최소 연산횟수
+    i = 4;
+    while (i <= n)
+    {
+        dp[i] = dp[i - 1] + 1; //1번 연산을 사용한 경우
+        if (i % 3 == 0)
+        {
+            dp[i] = min(dp[i], dp[i / 3] + 1); //1번 연산과 2번 연산에 대한 최소 연산횟수 판별
+        }
+        if (i % 2 == 0)
+        {
+            dp[i] = min(dp[i], dp[i / 2] + 1); //1번 연산과 3번 연산에 대한 최소 연산횟수 판별
+        }
+        i++;
+    }//dp[n]에 대한 연산횟수를 구하는 반복문
+    printf("%d", dp[n]);
+    return 0;   
+}
+
+```
 
 ##### 3-4. 최단 경로 문제(Shortest Path Problem)
 * 그래프에서 두 정점 간의 최단 경로를 찾는 문제
