--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -176,6 +176,21 @@ void deleteNode(LinkedList* list, int key) {
     free(temp);
 }
 
+//4
+int getElement(LinkedList* list, int index) {
+    Node* temp = list->head;
+    int count = 0;
+    while (temp != NULL) {
+        if (count == index) {
+            return temp->data;
+        }
+        count++;
+        temp = temp->next;
+    }
+    printf("Index out of bounds\n");
+    return -1;
+}
+
 ```
 
 
