--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -191,6 +191,20 @@ int getElement(LinkedList* list, int index) {
     return -1;
 }
 
+//5
+int findElement(LinkedList* list, int key) {
+    Node* temp = list->head;
+    int index = 0;
+    while (temp != NULL) {
+        if (temp->data == key) {
+            return index;
+        }
+        index++;
+        temp = temp->next;
+    }
+    return -1;
+}
+
 ```
 
 
