--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -115,7 +115,8 @@ void freeList(ArrayList* list) {
   * 인덱스를 통한 접근이 느리다. (O(n))
 
 ```cpp
-//1
+
+//구조체 정의
 typedef struct Node {
     int data;
     struct Node* next;
@@ -125,13 +126,14 @@ typedef struct LinkedList {
     Node* head;
 } LinkedList;
 
+//리스트 초기화
 LinkedList* createList() {
     LinkedList* list = (LinkedList*)malloc(sizeof(LinkedList));
     list->head = NULL;
     return list;
 }
 
-//2
+//시작지점 요소 삽입
 void insertAtBeginning(LinkedList* list, int data) {
     Node* newNode = (Node*)malloc(sizeof(Node));
     newNode->data = data;
@@ -139,6 +141,7 @@ void insertAtBeginning(LinkedList* list, int data) {
     list->head = newNode;
 }
 
+//끝나는지점확인 및 요소 삽입
 void insertAtEnd(LinkedList* list, int data) {
     Node* newNode = (Node*)malloc(sizeof(Node));
     newNode->data = data;
@@ -154,7 +157,7 @@ void insertAtEnd(LinkedList* list, int data) {
     temp->next = newNode;
 }
 
-//3
+//요소 삭제
 void deleteNode(LinkedList* list, int key) {
     Node* temp = list->head;
     Node* prev = NULL;
@@ -176,7 +179,7 @@ void deleteNode(LinkedList* list, int key) {
     free(temp);
 }
 
-//4
+//요소 조회
 int getElement(LinkedList* list, int index) {
     Node* temp = list->head;
     int count = 0;
@@ -191,7 +194,7 @@ int getElement(LinkedList* list, int index) {
     return -1;
 }
 
-//5
+//요소 탐색
 int findElement(LinkedList* list, int key) {
     Node* temp = list->head;
     int index = 0;
@@ -204,6 +207,20 @@ int findElement(LinkedList* list, int key) {
     }
     return -1;
 }
+
+//메모리 해제
+void freeList(LinkedList* list) {
+    Node* current = list->head;
+    Node* next;
+
+    while (current != NULL) {
+        next = current->next;
+        free(current);
+        current = next;
+    }
+    free(list);
+}
+
 
 ```
 
