--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -31,14 +31,16 @@
 
 ```cpp
 //구조체 정의
-typedef struct ArrayList {
+typedef struct ArrayList
+{
     int *array;		//리스트의 저장소인 배열
     int size;		//저장된 데이터의 수
     int capacity;	//저장소 배열의 저장공간
 } ArrayList;
 
 //초기화
-ArrayList* createList(int initialCapacity) {
+ArrayList* createList(int initialCapacity)
+{
     ArrayList* list = (ArrayList*)malloc(sizeof(ArrayList));	//리스트 선언 및 초기화
     list->array = (int*)malloc(initialCapacity * sizeof(int));	//리스트 배열의 초기화 
     list->size = 0;
@@ -47,13 +49,15 @@ ArrayList* createList(int initialCapacity) {
 }
 
 // 배열크기 변환
-void resizeList(ArrayList* list) {
+void resizeList(ArrayList* list)
+{
     list->capacity *= 2;
     list->array = (int*)realloc(list->array, list->capacity * sizeof(int));
 }
 
 //삽입
-void addElement(ArrayList* list, int element) {
+void addElement(ArrayList* list, int element)
+{
     if (list->size == list->capacity) {
         resizeList(list);
     }
@@ -61,7 +65,8 @@ void addElement(ArrayList* list, int element) {
 }
 
 //삭제
-void removeElement(ArrayList* list, int index) {
+void removeElement(ArrayList* list, int index)
+{
     if (index < 0 || index >= list->size) {
         printf("Index out of bounds\n");
         return;
@@ -73,7 +78,8 @@ void removeElement(ArrayList* list, int index) {
 }
 
 //조회
-int getElement(ArrayList* list, int index) {
+int getElement(ArrayList* list, int index)
+{
     if (index < 0 || index >= list->size) {
         printf("Index out of bounds\n");
         return -1;
@@ -82,7 +88,8 @@ int getElement(ArrayList* list, int index) {
 }
 
 //탐색
-int findElement(ArrayList* list, int element) {
+int findElement(ArrayList* list, int element)
+{
     for (int i = 0; i < list->size; i++) {
         if (list->array[i] == element) {
             return i;
@@ -92,7 +99,8 @@ int findElement(ArrayList* list, int element) {
 }
 
 //출력
-void printList(ArrayList* list) {
+void printList(ArrayList* list)
+{
     for (int i = 0; i < list->size; i++) {
         printf("%d ", list->array[i]);
     }
@@ -100,7 +108,8 @@ void printList(ArrayList* list) {
 }
 
 //메모리 해제
-void freeList(ArrayList* list) {
+void freeList(ArrayList* list)
+{
     free(list->array);
     free(list);
 }
@@ -117,24 +126,28 @@ void freeList(ArrayList* list) {
 ```cpp
 
 //구조체 정의
-typedef struct Node {
+typedef struct Node
+{
     int data;
     struct Node* next;
 } Node;
 
-typedef struct LinkedList {
+typedef struct LinkedList
+{
     Node* head;
 } LinkedList;
 
 //리스트 초기화
-LinkedList* createList() {
+LinkedList* createList()
+{
     LinkedList* list = (LinkedList*)malloc(sizeof(LinkedList));
     list->head = NULL;
     return list;
 }
 
 //시작지점 요소 삽입
-void insertAtBeginning(LinkedList* list, int data) {
+void insertAtBeginning(LinkedList* list, int data)
+{
     Node* newNode = (Node*)malloc(sizeof(Node));
     newNode->data = data;
     newNode->next = list->head;
@@ -142,7 +155,8 @@ void insertAtBeginning(LinkedList* list, int data) {
 }
 
 //끝나는지점확인 및 요소 삽입
-void insertAtEnd(LinkedList* list, int data) {
+void insertAtEnd(LinkedList* list, int data)
+{
     Node* newNode = (Node*)malloc(sizeof(Node));
     newNode->data = data;
     newNode->next = NULL;
@@ -158,7 +172,8 @@ void insertAtEnd(LinkedList* list, int data) {
 }
 
 //요소 삭제
-void deleteNode(LinkedList* list, int key) {
+void deleteNode(LinkedList* list, int key)
+{
     Node* temp = list->head;
     Node* prev = NULL;
 
@@ -180,7 +195,8 @@ void deleteNode(LinkedList* list, int key) {
 }
 
 //요소 조회
-int getElement(LinkedList* list, int index) {
+int getElement(LinkedList* list, int index)
+{
     Node* temp = list->head;
     int count = 0;
     while (temp != NULL) {
@@ -195,7 +211,8 @@ int getElement(LinkedList* list, int index) {
 }
 
 //요소 탐색
-int findElement(LinkedList* list, int key) {
+int findElement(LinkedList* list, int key)
+{
     Node* temp = list->head;
     int index = 0;
     while (temp != NULL) {
@@ -209,7 +226,8 @@ int findElement(LinkedList* list, int key) {
 }
 
 //메모리 해제
-void freeList(LinkedList* list) {
+void freeList(LinkedList* list)
+{
     Node* current = list->head;
     Node* next;
 
