--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -34,15 +34,15 @@
 typedef struct ArrayList
 {
     int *array;		//리스트의 저장소인 배열
-    int size;		//저장된 데이터의 수
-    int capacity;	//저장소 배열의 저장공간
+    int size;		//저장된 데이터의 수(참조 위치)
+    int capacity;	//저장소 배열에 대한 크기
 } ArrayList;
 
 //초기화
 ArrayList* createList(int initialCapacity)
 {
-    ArrayList* list = (ArrayList*)malloc(sizeof(ArrayList));	//리스트 선언 및 초기화
-    list->array = (int*)malloc(initialCapacity * sizeof(int));	//리스트 배열의 초기화 
+    ArrayList* list = (ArrayList*)malloc(sizeof(ArrayList));	//구조체 동적할당
+    list->array = (int*)malloc(initialCapacity * sizeof(int));	//리스트 배열을 크기만큼 동적할당 
     list->size = 0;
     list->capacity = initialCapacity;
     return list;
@@ -51,8 +51,8 @@ ArrayList* createList(int initialCapacity)
 // 배열크기 변환
 void resizeList(ArrayList* list)
 {
-    list->capacity *= 2;
-    list->array = (int*)realloc(list->array, list->capacity * sizeof(int));
+    list->capacity *= 2; //크기를 2배로 확장
+    list->array = (int*)realloc(list->array, list->capacity * sizeof(int)); //리스트 배열을 대상으로 새로운 동적할당(새로운 크기)
 }
 
 //삽입
@@ -60,8 +60,8 @@ void addElement(ArrayList* list, int element)
 {
     if (list->size == list->capacity) {
         resizeList(list);
-    }
-    list->array[list->size++] = element;
+    } //저장된 데이터수와 리스트 배열의 크기와 같으면 배열크기 변환
+    list->array[list->size++] = element; //리스트 배열의 새로운 위치에 데이터 저장
 }
 
 //삭제
@@ -70,11 +70,11 @@ void removeElement(ArrayList* list, int index)
     if (index < 0 || index >= list->size) {
         printf("Index out of bounds\n");
         return;
-    }
+    } //탐색대상이 0보다 작거나 또는 참조 위치보다 크거나 같으면 삭제 실패
     for (int i = index; i < list->size - 1; i++) {
         list->array[i] = list->array[i + 1];
-    }
-    list->size--;
+    } //삭제할 리스트 배열의 위치(i)를 다음 배열의 위치(i+1)로 변경
+    list->size--; //리스트 배열의 저장된 데이터 수 감소
 }
 
 //조회
