--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -23,6 +23,7 @@
 * 프로그램상에서 malloc 함수호출로 할당된 메모리 공간은 프로그래머가 직접 free 함수의 호출을 통해 해제할 때까지 계속 존재
 * malloc 함수의 반환형은 void형 포인터로서 void형으로 반환되는 주소 값을 적절히 형 변환해서 할당된 힙 영역 메모리 공간에 접근
 * malloc 함수의 호출을 통한 메모리 공간의 할당을 가리켜 '동적할당(dynamic allocation)'이라 한다.
+* malloc 함수로 동적할당 성공 시 메모리의 값은 쓰레기 값이므로 초기화 해줘야한다.
 * 프로그램 실행 시 할당된 모든 메모리 공간은 프로그램이 종료되면 운영체제에 의해서 전부 해제가 된다.
     
 ```cpp
@@ -38,6 +39,11 @@ void* ptr1 = malloc(4);		//4바이트가 힙 영역에 할당
 void* ptr2 = malloc(sizeof(int));		//int형 변수 크기의 메모리 공간 할당
 void* ptr3 = malloc(sizeof(double));	//double형 변수 크기의 메모리 공간 할당
 void* ptr4 = malloc(sizeof(int)*7);		//길이가 7인 int형 배열로 사용할 공간 마련
+
+//메모리 공간의 존재하는 쓰레기 값 초기화, ptr4는 배열이므로 모든 배열 값 초기화
+ptr1 = 0, ptr2 = 0, ptr3 = 0; 
+if(int i = 0; i<7;i++)
+    ptr4[i] = 0;
 
 free(ptr1);		//ptr1이 가리키는 4바이트 메모리 공간 해제
 free(ptr2);
