--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -42,9 +42,9 @@ typedef struct ArrayList
 ArrayList* createList(int initialCapacity)
 {
     ArrayList* list = (ArrayList*)malloc(sizeof(ArrayList));	//구조체 동적할당
-    list->array = (int*)malloc(initialCapacity * sizeof(int));	//리스트 배열을 크기만큼 동적할당 
-    list->size = 0;
-    list->capacity = initialCapacity;
+    list->capacity = initialCapacity; //배열에 지정할 값 저장 
+    list->array = (int*)malloc(list->capacity * sizeof(int));	//리스트 배열을 크기(list->capacity)만큼 동적할당 
+    list->size = 0; //참조위치는 0
     return list;
 }
 
@@ -52,7 +52,7 @@ ArrayList* createList(int initialCapacity)
 void resizeList(ArrayList* list)
 {
     list->capacity *= 2; //크기를 2배로 확장
-    list->array = (int*)realloc(list->array, list->capacity * sizeof(int)); //리스트 배열을 대상으로 새로운 동적할당(새로운 크기)
+    list->array = (int*)realloc(list->array, list->capacity * sizeof(int)); //리스트 배열을 대상으로 다시 동적할당
 }
 
 //삽입
@@ -61,7 +61,7 @@ void addElement(ArrayList* list, int element)
     if (list->size == list->capacity) {
         resizeList(list);
     } //저장된 데이터수와 리스트 배열의 크기와 같으면 배열크기 변환
-    list->array[list->size++] = element; //리스트 배열의 새로운 위치에 데이터 저장
+    list->array[list->size++] = element; //리스트 배열에 데이터 저장 및 참조 위치 증가
 }
 
 //삭제
@@ -70,11 +70,11 @@ void removeElement(ArrayList* list, int index)
     if (index < 0 || index >= list->size) {
         printf("Index out of bounds\n");
         return;
-    } //탐색대상이 0보다 작거나 또는 참조 위치보다 크거나 같으면 삭제 실패
+    } //탐색대상이 0보다 작거나 또는 참조 위치보다 크거나 같으면 실패
     for (int i = index; i < list->size - 1; i++) {
         list->array[i] = list->array[i + 1];
     } //삭제할 리스트 배열의 위치(i)를 다음 배열의 위치(i+1)로 변경
-    list->size--; //리스트 배열의 저장된 데이터 수 감소
+    list->size--; //참조 위치 감소
 }
 
 //조회
@@ -83,8 +83,8 @@ int getElement(ArrayList* list, int index)
     if (index < 0 || index >= list->size) {
         printf("Index out of bounds\n");
         return -1;
-    }
-    return list->array[index];
+    } //탐색대상이 0보다 작거나 또는 참조 위치보다 크거나 같으면 실패
+    return list->array[index];  //리스트에 저장된 배열 값 반환
 }
 
 //탐색
@@ -93,7 +93,7 @@ int findElement(ArrayList* list, int element)
     for (int i = 0; i < list->size; i++) {
         if (list->array[i] == element) {
             return i;
-        }
+        }//탐색대상과 저장된 배열 값과 같으면 참조 위치 반환
     }
     return -1;
 }
@@ -103,15 +103,15 @@ void printList(ArrayList* list)
 {
     for (int i = 0; i < list->size; i++) {
         printf("%d ", list->array[i]);
-    }
+    } //리스트에 저장된 배열값 출력
     printf("\n");
 }
 
 //메모리 해제
 void freeList(ArrayList* list)
 {
-    free(list->array);
-    free(list);
+    free(list->array); //리스트 배열 메모리 해제
+    free(list); //리스트 메모리 해제
 }
 
 ```
