--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -124,124 +124,120 @@ void freeList(ArrayList* list)
   * 인덱스를 통한 접근이 느리다. (O(n))
 
 ```cpp
-
-//구조체 정의
+//노드 구조체 정의
 typedef struct Node
 {
-    int data;
-    struct Node* next;
+    int data; //노드가 저장하는 데이터
+    struct Node* next; //다음 노드를 가리키는 포인터
 } Node;
 
-typedef struct LinkedList
+// 새로운 노드를 리스트의 끝에 추가하는 함수
+void append(Node** head_ref, int new_data)
 {
-    Node* head;
-} LinkedList;
+    Node* new_node = (Node*)malloc(sizeof(Node)); // 새로운 노드에 메모리 할당
+    Node* last = *head_ref; // 리스트의 마지막 노드를 찾기 위해 사용
 
-//리스트 초기화
-LinkedList* createList()
-{
-    LinkedList* list = (LinkedList*)malloc(sizeof(LinkedList));
-    list->head = NULL;
-    return list;
-}
+    new_node->data = new_data; // 새로운 노드에 데이터 할당
+    new_node->next = NULL; // 새로운 노드는 리스트의 끝에 위치하므로 next는 NULL
 
-//시작지점 요소 삽입
-void insertAtBeginning(LinkedList* list, int data)
-{
-    Node* newNode = (Node*)malloc(sizeof(Node));
-    newNode->data = data;
-    newNode->next = list->head;
-    list->head = newNode;
-}
-
-//끝나는지점확인 및 요소 삽입
-void insertAtEnd(LinkedList* list, int data)
-{
-    Node* newNode = (Node*)malloc(sizeof(Node));
-    newNode->data = data;
-    newNode->next = NULL;
-    if (list->head == NULL) {
-        list->head = newNode;
+    // 리스트가 비어있는 경우, 새로운 노드를 head로 설정
+    if (*head_ref == NULL) {
+        *head_ref = new_node;
         return;
     }
-    Node* temp = list->head;
-    while (temp->next != NULL) {
-        temp = temp->next;
+
+    // 마지막 노드를 찾기 위해 리스트를 순회
+    while (last->next != NULL) {
+        last = last->next;
     }
-    temp->next = newNode;
+
+    // 마지막 노드의 next를 새로운 노드로 설정
+    last->next = new_node;
 }
 
-//요소 삭제
-void deleteNode(LinkedList* list, int key)
-{
-    Node* temp = list->head;
-    Node* prev = NULL;
+// 특정 값을 가진 노드를 삭제하는 함수
+void deleteNode(Node** head_ref, int key) {
+    Node* temp = *head_ref; // 리스트를 순회할 포인터
+    Node* prev = NULL; // 삭제할 노드의 이전 노드를 저장할 포인터
 
+    // head 노드가 삭제할 노드인 경우
     if (temp != NULL && temp->data == key) {
-        list->head = temp->next;
-        free(temp);
+        *head_ref = temp->next; // head를 다음 노드로 변경
+        free(temp); // 기존 head 메모리 해제
         return;
     }
 
+    // 삭제할 노드를 찾기 위해 리스트를 순회
     while (temp != NULL && temp->data != key) {
         prev = temp;
         temp = temp->next;
     }
 
+    // 삭제할 노드가 없는 경우
     if (temp == NULL) return;
 
+    // 삭제할 노드의 이전 노드를 다음 노드와 연결
     prev->next = temp->next;
+
+    // 삭제할 노드의 메모리 해제
     free(temp);
 }
 
-//요소 조회
-int getElement(LinkedList* list, int index)
-{
-    Node* temp = list->head;
-    int count = 0;
-    while (temp != NULL) {
-        if (count == index) {
-            return temp->data;
-        }
-        count++;
-        temp = temp->next;
-    }
-    printf("Index out of bounds\n");
-    return -1;
-}
-
-//요소 탐색
-int findElement(LinkedList* list, int key)
-{
-    Node* temp = list->head;
-    int index = 0;
-    while (temp != NULL) {
-        if (temp->data == key) {
-            return index;
-        }
-        index++;
-        temp = temp->next;
-    }
-    return -1;
-}
-
-//메모리 해제
-void freeList(LinkedList* list)
-{
-    Node* current = list->head;
-    Node* next;
-
+// 특정 값을 가진 노드를 검색하는 함수
+bool search(Node* head, int key) {
+    Node* current = head; // 리스트를 순회할 포인터
     while (current != NULL) {
-        next = current->next;
-        free(current);
-        current = next;
+        if (current->data == key) // 키 값과 일치하는 데이터를 찾으면 true 반환
+            return true;
+        current = current->next; // 다음 노드로 이동
     }
-    free(list);
+    return false; // 키 값을 찾지 못하면 false 반환
 }
 
+// 리스트의 모든 노드를 출력하는 함수
+void printList(Node* node) {
+    while (node != NULL) {
+        printf("%d -> ", node->data); // 현재 노드의 데이터 출력
+        node = node->next; // 다음 노드로 이동
+    }
+    printf("NULL\n"); // 리스트의 끝을 표시
+}
 
 ```
+```cpp
+#include <stdio.h>
+#include <stdlib.h>
+#include <stdbool.h>
 
+int main() {
+    Node* head = NULL; // 빈 리스트를 초기화
+
+    // 리스트에 노드 추가
+    append(&head, 1);
+    append(&head, 2);
+    append(&head, 3);
+    append(&head, 4);
+
+    // 현재 리스트 출력
+    printf("Created Linked List: ");
+    printList(head);
+
+    // 리스트에서 값이 3인 노드 삭제
+    deleteNode(&head, 3);
+    printf("Linked List after deletion of 3: ");
+    printList(head);
+
+    // 리스트에서 값이 2인 노드 검색
+    int item_to_find = 2;
+    if (search(head, item_to_find)) {
+        printf("%d is found in the list.\n", item_to_find);
+    } else {
+        printf("%d is not found in the list.\n", item_to_find);
+    }
+
+    return 0;
+}
+```
 
 
 
