--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -17,8 +17,10 @@
   6. 메모리 해제 : 리스트가 더 이상 필요 없을 때 할당된 메모리를 해제
 
 * 구현방법
-  * 배열 기반 리스트
+  * 배열 기반 리스트(순차리스트)
   * 연결 리스트
+    * 단순 연결 리스트
+    * 원형 연결 리스트
 
 
 #### 2-1. 배열 기반 리스트(순차리스트)
@@ -116,7 +118,7 @@ void freeList(ArrayList* list)
 
 ```
 
-#### 2-2. 연결 리스트
+#### 2-2. 단순 연결 리스트
 * 각 요소가 노드로 구현되며, 노드는 데이터와 다음 노드에 대한 참조(포인터)를 가진다.
 * 장점
   * 요소의 삽입과 삭제가 빠르다. (O(1))
