--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -61,6 +61,15 @@ free(ptr2);
 free(ptr3);
 free(ptr4);
 
+//해제된 변수(노드)에 참조하는 변수(노드)가 존재할 경우, 이미 해제된 변수(노드)를 가리키므로 별도로 해제할 필요는 없다.
+int* ptr1 = (int*)malloc(sizeof(int));
+Node* nNode1 = (Node*)malloc(sizeof(Node);
+int* ptr2 = ptr1;
+Node* nNode2 = nNode1;
+
+free(ptr1);
+free(nNode1);
+
 //이중 포인터 배열 메모리 할당
 char** ptr5 = (char**)malloc(sizeof(char*));
 
