--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -242,7 +242,7 @@ int main() {
 ```
 
 #### 2-3. 원형 연결 리스트(Circular Linked List)
-
+* 단순 연결 리스트의 마지막 노드가 NULL 대신 첫 번째 노드를 가리키게 하면 '원형 연결 리스트'라고 한다.
 
 
 
