--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -242,7 +242,24 @@ int main() {
 ```
 
 #### 2-3. 원형 연결 리스트(Circular Linked List)
-* 단순 연결 리스트의 마지막 노드가 NULL 대신 첫 번째 노드를 가리키게 하면 '원형 연결 리스트'라고 한다.
+* 마지막 노드가 첫 번째 노드를 가리키는 형태의 연결리스트로서 리스트의 끝이 다시 처음으로 연결되므로 리스트의 끝이 따로 존재하지 않는다.
+* 특징
+  * 마지막 노드의 next 포인터가 첫 번째 노드를 가리킴.
+  * 리스트의 순회가 끝나지 않고 계속 순환 가능.
+  * 처음이나 끝에서 삽입 및 삭제 연산이 효율적.
+* 장점
+  * 리스트의 끝에서 첫 번째 노드로 쉽게 돌아갈 수 있음.
+  * 원형 구조 덕분에 특정 상황에서는 효율적인 메모리 사용이 가능함.
+* 단점
+  * 원형 구조를 파악하기 위해 조건문을 사용해야 할 때가 있음.
+  * 코드 구현 시 일반 연결리스트보다 복잡도가 증가할 수 있음.
+ 
+
+
+
+
+
+
 
 
 
