--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -255,7 +255,7 @@ int main() {
   * 코드 구현 시 일반 연결리스트보다 복잡도가 증가할 수 있음.
  
 #### 2-4. 양방향 연결리스트
-
+* 각 노드가 이전 노드와 다음 노드를 가리키는 두 개의 포인터를 가지는 연결리스트로서 노드는 이전 노드로도 이동할 수 있고, 다음 노드로도 이동할 수 있는 구조로 이루어져 있다.
 
 
 
