--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -256,7 +256,10 @@ int main() {
  
 #### 2-4. 양방향 연결리스트
 * 각 노드가 이전 노드와 다음 노드를 가리키는 두 개의 포인터를 가지는 연결리스트로서 노드는 이전 노드로도 이동할 수 있고, 다음 노드로도 이동할 수 있는 구조로 이루어져 있다.
-
+* 특징
+  * 각 노드는 **prev**와 next 포인터를 가짐.
+  * 리스트를 양방향으로 탐색 가능.
+  * 삽입 및 삭제 연산이 단방향 연결리스트보다 더 유연함.
 
 
 
