--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -260,6 +260,9 @@ int main() {
   * 각 노드는 **prev**와 next 포인터를 가짐.
   * 리스트를 양방향으로 탐색 가능.
   * 삽입 및 삭제 연산이 단방향 연결리스트보다 더 유연함.
+* 장점
+  * 양방향으로 탐색이 가능해 데이터를 처리할 때 효율적임.
+  * 삽입과 삭제 연산 시, 단방향 연결리스트보다 더 간단하게 수행 가능.
 
 
 
