--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -263,6 +263,9 @@ int main() {
 * 장점
   * 양방향으로 탐색이 가능해 데이터를 처리할 때 효율적임.
   * 삽입과 삭제 연산 시, 단방향 연결리스트보다 더 간단하게 수행 가능.
+* 단점
+  * 각 노드가 두 개의 포인터(prev와 next)를 가지므로, 메모리 사용량이 더 많음.
+  * 구현이 단방향 연결리스트보다 복잡함.
 
 
 
