--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -122,8 +122,10 @@ void freeList(ArrayList* list)
 * 각 요소가 노드로 구현되며, 노드는 데이터와 다음 노드에 대한 참조(포인터)를 가진다.
 * 장점
   * 요소의 삽입과 삭제가 빠르다. (O(1))
+  * 구조가 단순하고 구현이 쉬움.
 * 단점
   * 인덱스를 통한 접근이 느리다. (O(n))
+  * 노드가 한 방향으로만 연결되어 있어, 노드를 삭제하거나 삽입할 때 이전 노드에 대한 정보를 미리 알고 있어야 함.
 
 ```cpp
 //노드 구조체 정의
