--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -243,7 +243,9 @@ int main() {
 }
 ```
 
-#### 2-3. 원형 연결 리스트(Circular Linked List)
+#### 2-3. 다중 연결리스트 (Multilevel Linked List)
+
+#### 2-4. 원형 연결 리스트(Circular Linked List)
 * 마지막 노드가 첫 번째 노드를 가리키는 형태의 연결리스트로서 리스트의 끝이 다시 처음으로 연결되므로 리스트의 끝이 따로 존재하지 않는다.
 * 특징
   * 마지막 노드의 next 포인터가 첫 번째 노드를 가리킴.
@@ -256,7 +258,7 @@ int main() {
   * 원형 구조를 파악하기 위해 조건문을 사용해야 할 때가 있음.
   * 코드 구현 시 일반 연결리스트보다 복잡도가 증가할 수 있음.
  
-#### 2-4. 양방향 연결리스트
+#### 2-5. 양방향 연결리스트
 * 각 노드가 이전 노드와 다음 노드를 가리키는 두 개의 포인터를 가지는 연결리스트로서 노드는 이전 노드로도 이동할 수 있고, 다음 노드로도 이동할 수 있는 구조로 이루어져 있다.
 * 특징
   * 각 노드는 **prev**와 next 포인터를 가짐.
