--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -244,7 +244,12 @@ int main() {
 ```
 
 #### 2-3. 다중 연결리스트 (Multilevel Linked List)
+* 하나의 연결리스트에 여러 레벨로 다른 연결리스트가 연결된 구조로서, 한 노드가 또 다른 연결리스트의 시작을 가리킬 수 있고 이를 통해 다차원 데이터를 표현할 수 있다.
 
+* 특징: 각 노드가 하위 리스트를 가리킬 수 있음.
+* 사용 사례: 2차원 배열, 트리 구조 등의 데이터를 표현할 때 사용 가능.
+
+  
 #### 2-4. 원형 연결 리스트(Circular Linked List)
 * 마지막 노드가 첫 번째 노드를 가리키는 형태의 연결리스트로서 리스트의 끝이 다시 처음으로 연결되므로 리스트의 끝이 따로 존재하지 않는다.
 * 특징
