--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -99,7 +99,7 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |void srand(unsigned int seed);|난수 생성기의 시드를 설정|
 
 ##### 4-3. 정수 변환
-* str : 변환할 문자열
+* str : 변환할 문자열(+ a를 이용하여 원하는 위치의 문자열을 끝까지 변환할 수 있다.)
 * endptr : 변환이 끝난 위치를 가리키는 포인터(숫자로 변환할 수 없는 문자열(문자열의 나머지 부분))
 * base : 변환할 숫자의 진수(base)
 
