--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -198,7 +198,7 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 * const char *str1 : 탐색할 대상 문자열을 가리키는 포인터
 * const char *str2 : str1에 제공하는 문자를 가리키는 포인터
 * char *str : 분할할 원본 문자열을 가리키는 포인터. 처음 호출할 때는 이 인수에 문자열을 전달하고, 이후 호출할 때는 NULL을 전달한다.
-* const char *delim : 분자 문자열을 가리키는 포인터로서 분할할 때 사용할 구분자 문자들을 포함한다.
+* const char *delim : 분자 문자열을 가리키는 포인터로서 분할할 때 사용할 구분자 문자들을 포함한다('.', ' ', ',' 등등).
 * int errnum : 오류를 나타내는 정수 값
 
 #### 7. errno.h
